Add initial draft of API layout

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -51,9 +51,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.5",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ac63d63c87b66dace1e04fdd182187f61f05b0244274f83eb0953f1ecba34997"
+   }
   }
  },
  "nbformat": 4,
