--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,12 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from squeakily.core import *"
+    "import logging\n",
+    "\n",
+    "from squeakily.core import *\n",
+    "\n",
+    "# Turn off logging for datasets\n",
+    "logging.getLogger(\"datasets\").setLevel(logging.ERROR)"
    ]
   },
   {
@@ -30,10 +35,10 @@
     "```{mermaid}\n",
     "flowchart LR\n",
     "  A(Defining <br/>Datasources) --> B(Defining Filters <br/>per Datasource)\n",
-    "  B --> C(Defining Cleaning Functions <br/>per Datasource)\n",
+    "  B --> C(Defining Cleaners <br/>per Datasource)\n",
     "```\n",
     "\n",
-    "In this library, we define filtering as data instances being removed from the dataset based on some criteria, and cleaning as data instances being modified in some way."
+    "In this library, we define filtering as data instances being removed from the dataset based on some criteria and cleaning as data instances being modified in some way."
    ]
   },
   {
@@ -65,36 +70,7 @@
    "source": [
     "### Using the API\n",
     "\n",
-    "First, we need to define a datasource. `squeakily` accepts any `Dataset` object from the [HuggingFace Datasets](https://huggingface.co/datasets) library. For example, we can use the `wikitext` dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "ds = load_dataset(\"wikitext\", \"wikitext-103-v1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We simply need to wrap the `Dataset` object in a dictionary, with the key being the name of the datasource and the value being the `Dataset` object, the filter and cleaning functions. For example:"
+    "First, we need to define a datasource. `squeakily` accepts any `Dataset` object from the [HuggingFace Datasets](https://huggingface.co/docs/datasets/index) library. For example, we can use the [wikitext](https://huggingface.co/datasets/wikitext) dataset:"
    ]
   },
   {
@@ -103,25 +79,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from squeakily.filter import exact_match, flagged\n",
-    "from squeakily.clean import remove_empty_lines, normalize_whitespace\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "datasources = {\n",
-    "    \"wikitext\": {\n",
-    "        \"dataset\": ds,\n",
-    "        \"columns\": [\"text\"],\n",
-    "        \"filters\": [exact_match, flagged],\n",
-    "        \"cleaners\": [remove_empty_lines, normalize_whitespace],\n",
-    "    },\n",
-    "    # ...\n",
-    "}"
+    "ds = load_dataset(\"wikitext\", \"wikitext-103-v1\", split=\"train[:10%]\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can apply the filters and cleaning functions to the datasouces using a `Pipeline` object:"
+    "We simply need to wrap the `Dataset` object in a dictionary, with the key being the name of the datasource and the value being the `Dataset` object, the filter and cleaners. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from squeakily.filter import check_char_repetition, check_flagged_words\n",
+    "from squeakily.clean import remove_empty_lines, normalize_whitespace\n",
+    "\n",
+    "datasources = [\n",
+    "    {\n",
+    "        \"dataset\": ds,\n",
+    "        \"columns\": [\"text\"],\n",
+    "        \"filters\": [check_char_repetition, check_flagged_words],\n",
+    "        \"cleaners\": [remove_empty_lines, normalize_whitespace],\n",
+    "    },\n",
+    "    # ...\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{.callout-warning}\n",
+    "Note: The order of the filters and cleaning functions matter. Filters and cleaners are applied in the order they are defined.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{.callout-important}\n",
+    "Note: As of now, we only use the first column of the given column names. This is because the `squeakily` library is designed to work with language datasets, which usually have a single column of text. Future versions will support multiple columns.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can apply the filters and cleaners to the datasouces using a `Pipeline` object:"
    ]
   },
   {
@@ -141,7 +153,7 @@
    "metadata": {},
    "source": [
     ":::{.callout-note}\n",
-    "Note: If you want to run cleaning functions first, you can pass `cleaning_first=True` to the `run` function.\n",
+    "Note: If you want to run cleaners first, you can pass `cleaning_first=True` to the `run` function.\n",
     "\n",
     "```python\n",
     "pipeline.run(cleaning_first=True)\n",
@@ -152,18 +164,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5",
+   "display_name": "Python 3.9.13 ('squeakily')",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.9.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "ac63d63c87b66dace1e04fdd182187f61f05b0244274f83eb0953f1ecba34997"
-   }
   }
  },
  "nbformat": 4,
