Add minhash dedup via global filters

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -25,10 +25,38 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import datasets\n",
+    "import gc\n",
+    "import hashlib\n",
+    "import logging\n",
+    "import multiprocessing\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "\n",
+    "import networkit as nk\n",
     "import numpy as np\n",
     "\n",
     "from collections import Counter\n",
-    "from squeakily.helpers import flagged_words, get_words"
+    "from datasets import Dataset\n",
+    "from datasketch import LeanMinHash, MinHash, MinHashLSH\n",
+    "from rich.logging import RichHandler\n",
+    "from squeakily.helpers import flagged_words, get_words\n",
+    "from tqdm.auto import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "logger.addHandler(RichHandler(rich_tracebacks=True))\n",
+    "logger.propagate = False\n",
+    "datasets.logging.set_verbosity_error()"
    ]
   },
   {
@@ -38,6 +66,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
+    "from datasets import load_dataset\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -192,6 +221,489 @@
    "source": [
     "assert check_flagged_words(\"test\") == True\n",
     "assert check_flagged_words(\"cougar\") == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Whole Dataset Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MinHash Deduplication\n",
+    "The following code has all been adapted from the awesome [Chenghao Mou](https://github.com/ChenghaoMou) and their work on the [BigCode repository](https://github.com/bigcode-project/bigcode-analysis/blob/main/data_analysis/near-deduplication)!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "multiprocessing.set_start_method(\"fork\", force=True)\n",
+    "\n",
+    "MINHASH_SEED = 115\n",
+    "NON_ALPHA = re.compile(\"[^A-Za-z_0-9]\")\n",
+    "\n",
+    "random.seed(MINHASH_SEED)\n",
+    "\n",
+    "lsh: MinHashLSH = None\n",
+    "dup_ids: set[int] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _hash_func(\n",
+    "    idx: int, # The index of the record.\n",
+    "    content: str, # The content to be hashed.\n",
+    "    *,\n",
+    "    num_perm: int # The number of permutations to use in the MinHash object.\n",
+    ") -> dict[str, any]: # The MinHash signature and the index of the record.\n",
+    "    \"\"\"\n",
+    "    Embed the content of a record into a MinHash object. This function should be\n",
+    "    used with multiprocessing and it scales well with the number of cores.\n",
+    "    >>> result = _hash_func(0, \"Hello world!\", num_perm=128)\n",
+    "    >>> result[\"__id__\"]\n",
+    "    0\n",
+    "    >>> result[\"__signature__\"].shape\n",
+    "    (128,)\n",
+    "    >>> result[\"__signature__\"].dtype\n",
+    "    dtype('uint64')\n",
+    "    \"\"\"\n",
+    "    m = MinHash(num_perm=num_perm, seed=MINHASH_SEED)\n",
+    "    m.update_batch([token.encode(\"utf-8\") for token in {t for t in NON_ALPHA.split(content) if t}])\n",
+    "    return {\"__signature__\": m.hashvalues, \"__id__\": idx}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = _hash_func(0, \"Hello world!\", num_perm=128)\n",
+    "assert result[\"__id__\"] == 0\n",
+    "assert result[\"__signature__\"].shape == (128,)\n",
+    "assert result[\"__signature__\"].dtype == np.uint64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _query_content(\n",
+    "    idx: int, # The index of the record.\n",
+    "    signature: np.ndarray, # The MinHash signature of the record to be queried.\n",
+    "    *,\n",
+    "    index: MinHashLSH # The MinHashLSH index. It is shared across all processes when using multiprocessing with fork without copy.\n",
+    ") -> dict[str, any]: # The query result.\n",
+    "    \"\"\"\n",
+    "    Query the MinHashLSH index for the record. This function can be used with multiprocessing\n",
+    "    as long as the index is shared across processes.\n",
+    "    \"\"\"\n",
+    "    return {\n",
+    "        \"__neighbors__\": [\n",
+    "            dup_idx\n",
+    "            for dup_idx in index.query(\n",
+    "                LeanMinHash(seed=MINHASH_SEED, hashvalues=signature),\n",
+    "            )\n",
+    "            if dup_idx != idx  # exclude itself\n",
+    "        ],\n",
+    "        \"__id__\": idx,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\"Hello world!\", \"Hello world\"]\n",
+    "signatures = [_hash_func(i, content, num_perm=128) for i, content in enumerate(data)]\n",
+    "index = MinHashLSH(threshold=0.5, num_perm=128)\n",
+    "for signature in signatures:\n",
+    "    index.insert(\n",
+    "        signature[\"__id__\"],\n",
+    "        MinHash(num_perm=128, hashvalues=signature[\"__signature__\"], seed=MINHASH_SEED)\n",
+    "    )\n",
+    "assert _query_content(0, signatures[0][\"__signature__\"], index=index) == {'__neighbors__': [1], '__id__': 0}\n",
+    "assert _query_content(1, signatures[1][\"__signature__\"], index=index) == {'__neighbors__': [0], '__id__': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _jaccard_similarity(\n",
+    "    s1: str, # The first string to compare.\n",
+    "    s2: str # The second string to compare.\n",
+    ") -> float: # The Jaccard similarity between the two strings.\n",
+    "    \"\"\"\n",
+    "    Calculate the jaccard similarity between two code snippets.\n",
+    "    \"\"\"\n",
+    "    tokens1 = set([t for t in NON_ALPHA.split(s1) if t.strip()])\n",
+    "    tokens2 = set([t for t in NON_ALPHA.split(s2) if t.strip()])\n",
+    "    return len(tokens1 & tokens2) / max(1, len(tokens1 | tokens2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert _jaccard_similarity(\"a = 1\", \"a = 2\") == 0.3333333333333333\n",
+    "assert _jaccard_similarity(\"a = 1\", \"a = 1\") == 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _calculate_average_false_positive_rate(\n",
+    "    clusters: list[list[int]], # The clusters of duplicate records.\n",
+    "    reference_records: Dataset, # The reference records.\n",
+    "    threshold: float, # The threshold to use for calculating the false positive rate.\n",
+    "    column: str, # The column to use for calculating the false positive rate.\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Calculate the average false positive rate within each cluster. The false positives are defined as\n",
+    "    number of examples that have a maximum jaccard similarity with any example in the cluster that is\n",
+    "    less than the threshold. The false positive rate is defined as the number of false positives divided\n",
+    "    by the number of examples in the cluster. The average false positive rate is defined as the average\n",
+    "    of the false positive rate across all clusters given.\n",
+    "    \"\"\"\n",
+    "    cluster_false_positive_rates: list[float] = []\n",
+    "    deltas: list[float] = []\n",
+    "\n",
+    "    for cluster in tqdm(clusters, desc=\"Calculating sampling false positive rate...\"):\n",
+    "        num_false_positives = 0\n",
+    "        ids = sorted(cluster)\n",
+    "        for i, x in enumerate(ids):\n",
+    "            is_false_positive = True\n",
+    "            max_similarity = -float(\"inf\")\n",
+    "            for j, y in enumerate(ids):\n",
+    "                if i == j:\n",
+    "                    continue\n",
+    "                # TODO This can be redundant but we only calculate this for a small sample\n",
+    "                similarity = _jaccard_similarity(reference_records[x][column], reference_records[y][column])\n",
+    "                max_similarity = max(max_similarity, similarity)\n",
+    "                if max_similarity >= threshold:\n",
+    "                    is_false_positive = False\n",
+    "                    break\n",
+    "            if is_false_positive:\n",
+    "                num_false_positives += 1\n",
+    "                deltas.append(threshold - max_similarity)\n",
+    "        cluster_false_positive_rates.append(num_false_positives / len(ids))\n",
+    "\n",
+    "    logger.info(\n",
+    "        f\"Average false positive rate from {len(clusters)} clusters: {np.mean(cluster_false_positive_rates):.2f}\"\n",
+    "    )\n",
+    "    logger.info(f\"Similarity delta stats from threshold:\")\n",
+    "    logger.info(f\"-  Max : {np.max(deltas):0.2f}\")\n",
+    "    logger.info(f\"-  Min : {np.min(deltas):0.2f}\")\n",
+    "    logger.info(f\"-  Mean: {np.mean(deltas):0.2f}\")\n",
+    "    logger.info(f\"-  Std : {np.std(deltas):0.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def _find_duplicate_communities(\n",
+    "    records: Dataset, # The dataset that contains both `__id__` and `__neighbors__`.\n",
+    "    community_detection: bool, # Whether to use community detection to find the duplicate communities, or to use the connected components.\n",
+    "    report_false_positive_rate: bool = False, # Whether to report the false positive rate.\n",
+    "    reference_records: Dataset = None, # The reference records. It can be an iterable or a Dataset. It is only used when `report_false_positive_rate` is True.\n",
+    "    threshold: float = 0.85, # The threshold to use for calculating the false positive rate.\n",
+    "    column: str = \"content\", # The column to use for calculating the false positive rate.\n",
+    "    verbose: bool = False,\n",
+    ") -> set[int]: # The set of duplicate ids that should be removed, leaving only one id in each community.\n",
+    "    \"\"\"\n",
+    "    Find the duplicate communities from the queried dataset.\n",
+    "    \"\"\"\n",
+    "    SAMPLE_MIN_SIZE = 10\n",
+    "    SAMPLE_MAX_SIZE = 100\n",
+    "    SAMPLE_SIZE = 10\n",
+    "    g = nk.graph.Graph()\n",
+    "    for record in tqdm(records, desc=\"Constructing graph...\"):\n",
+    "        for y in record[\"__neighbors__\"]:\n",
+    "            g.addEdge(record[\"__id__\"], y, addMissing=True)\n",
+    "\n",
+    "    to_remove: set[int] = set()\n",
+    "    samples: list[list[int]] = []\n",
+    "    if not community_detection:\n",
+    "        cc = nk.components.ConnectedComponents(g)\n",
+    "        cc.run()\n",
+    "        partition = cc.getPartition()\n",
+    "        components = list(cc.getComponents())\n",
+    "        random.shuffle(components)\n",
+    "        for component in tqdm(components, desc=\"Iterating over components...\"):\n",
+    "            component = sorted(component)\n",
+    "            to_remove.update(component[1:])\n",
+    "            if len(samples) < SAMPLE_SIZE and SAMPLE_MAX_SIZE > len(component) >= SAMPLE_MIN_SIZE:\n",
+    "                samples.append(component[:])\n",
+    "    else:\n",
+    "        algo = nk.community.PLM(g, refine=False)\n",
+    "        algo.run()\n",
+    "        partition = algo.getPartition()\n",
+    "        communities = list(partition.getSubsetIds())\n",
+    "        random.shuffle(communities)\n",
+    "        # This can be slow if there are many communities\n",
+    "        for i in tqdm(communities, desc=\"Iterating over communities...\"):\n",
+    "            ids = partition.getMembers(i)\n",
+    "            to_remove.update(sorted(ids)[1:])\n",
+    "            if len(samples) < SAMPLE_SIZE and SAMPLE_MAX_SIZE > len(ids) >= SAMPLE_MIN_SIZE:\n",
+    "                samples.append(ids)\n",
+    "\n",
+    "    if report_false_positive_rate and verbose:\n",
+    "        _calculate_average_false_positive_rate(\n",
+    "            samples,\n",
+    "            reference_records,\n",
+    "            threshold,\n",
+    "            column,\n",
+    "        )\n",
+    "\n",
+    "    return to_remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def minhash_dedup(\n",
+    "    ds, # The dataset to deduplicate.\n",
+    "    column, # The column to use for deduplication.\n",
+    "    community_detection: bool = False, # Whether to use community detection to find the duplicate communities, or to use the connected components.\n",
+    "    report_false_positive_rate: bool = False, # Whether to report the false positive rate.\n",
+    "    threshold: float = 0.85, # The threshold to use for deduplication.\n",
+    "    num_perm: int = 128 # The number of permutations to use for minhashing.\n",
+    ") -> Dataset:\n",
+    "    \"\"\"\n",
+    "    Deduplicate the dataset using minhashing as described in the paper \"Deduplicating Training Data Makes Language Models Better\".\n",
+    "    \"\"\"\n",
+    "    global lsh\n",
+    "    global dup_ids\n",
+    "\n",
+    "    lsh = MinHashLSH(\n",
+    "        threshold=threshold,\n",
+    "        num_perm=num_perm,\n",
+    "    )\n",
+    "\n",
+    "    ds = ds.map(\n",
+    "        lambda _, idx: {\"__id__\": idx},\n",
+    "        with_indices=True,\n",
+    "        num_proc=os.cpu_count(),\n",
+    "        desc=\"Adding index...\",\n",
+    "    )\n",
+    "\n",
+    "    hashed_ds = ds.map(\n",
+    "        function=_hash_func,\n",
+    "        fn_kwargs={\"num_perm\": num_perm},\n",
+    "        input_columns=[\"__id__\", column],\n",
+    "        remove_columns=[column],\n",
+    "        num_proc=os.cpu_count(),\n",
+    "        desc=f\"Fingerprinting...\",\n",
+    "    )\n",
+    "\n",
+    "    with lsh.insertion_session() as session:\n",
+    "        for data in tqdm(hashed_ds, desc=\"Indexing signatures...\"):\n",
+    "            if data[\"__id__\"] in lsh:\n",
+    "                continue\n",
+    "            session.insert(\n",
+    "                data[\"__id__\"],\n",
+    "                LeanMinHash(seed=MINHASH_SEED, hashvalues=data[\"__signature__\"]),\n",
+    "                check_duplication=False,\n",
+    "            )\n",
+    "    \n",
+    "    gc.disable()\n",
+    "    gc.freeze()\n",
+    "\n",
+    "    conf = {\n",
+    "        \"threshold\": threshold,\n",
+    "        \"community_detection\": community_detection,\n",
+    "        \"report_false_positive_rate\": report_false_positive_rate,\n",
+    "        \"num_perm\": num_perm,\n",
+    "        \"name\": ds.builder_name,\n",
+    "        \"column\": column,\n",
+    "    }\n",
+    "    queried = hashed_ds.map(\n",
+    "        lambda x, y: _query_content(x, y, index=lsh),\n",
+    "        num_proc=os.cpu_count(),\n",
+    "        # new_fingerprint=hashlib.md5(pickle.dumps(conf)).hexdigest(),\n",
+    "        input_columns=[\"__id__\", \"__signature__\"],\n",
+    "        remove_columns=[\"__signature__\"],\n",
+    "        desc=f\"Querying...\",\n",
+    "    )\n",
+    "\n",
+    "    del lsh\n",
+    "    gc.collect()\n",
+    "\n",
+    "    queried = queried.filter(\n",
+    "        lambda x: len(x[\"__neighbors__\"]) > 0, num_proc=os.cpu_count(), desc=\"Finding duplicates...\"\n",
+    "    )\n",
+    "    dup_ids = _find_duplicate_communities(\n",
+    "        records=queried,\n",
+    "        community_detection=conf[\"community_detection\"],\n",
+    "        report_false_positive_rate=conf[\"report_false_positive_rate\"],\n",
+    "        reference_records=ds,\n",
+    "        threshold=conf[\"threshold\"],\n",
+    "        column=conf[\"column\"],\n",
+    "    )\n",
+    "\n",
+    "    del queried\n",
+    "    gc.collect()\n",
+    "\n",
+    "    final_data = ds.filter(\n",
+    "        lambda idx: idx not in dup_ids,\n",
+    "        input_columns=[\"__id__\"],\n",
+    "        num_proc=os.cpu_count(),\n",
+    "        desc=\"Filtering duplicates...\",\n",
+    "    )\n",
+    "    return final_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a2fe42bcff84bdda39eaf408e72f296",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f0627aca320e4d26bdb86b092a7acd5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1de094a1e694977bb7b0e85a7757ffd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            "
+     ]
+    }
+   ],
+   "source": [
+    "dataset = load_dataset(\"wikitext\", \"wikitext-103-raw-v1\", split=\"train\")\n",
+    "dataset = dataset.select(range(1_000))\n",
+    "deduped_dataset = minhash_dedup(dataset, \"text\", community_detection=True, threshold=0.85, num_perm=128)\n",
+    "\n",
+    "assert len(deduped_dataset) == len(dataset) - len(dup_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Flower Fairies of the Spring ; Blackie , 1923 \n",
+      "\n",
+      " = = = Regular season = = = \n",
+      "\n",
+      " \" There 's Got to Be a Way \" ( 12 \" remix ) \n",
+      "\n",
+      " = = Early life = = \n",
+      "\n",
+      " = = Awards = = \n",
+      "\n",
+      " = = Critical reception = = \n",
+      "\n",
+      " = = History = = \n",
+      "\n",
+      " = = Service history = = \n",
+      "\n",
+      " = = Description = = \n",
+      "\n",
+      " = = Background = = \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print which records were removed\n",
+    "for idx in dup_ids:\n",
+    "    if dataset[idx][\"text\"] == \"\":\n",
+    "        continue\n",
+    "    print(dataset[idx][\"text\"])"
    ]
   },
   {
