--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "ds = load_dataset(\"wikitext\", \"wikitext-103-v1\", split=\"train[:10%]\")"
+    "ds = load_dataset(\"wikitext\", \"wikitext-103-v1\", split=\"train[:1%]\")"
    ]
   },
   {
@@ -158,6 +158,33 @@
     "```python\n",
     "pipeline.run(cleaning_first=True)\n",
     "```\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you need to run a filter or cleaner at the dataset level rather than the example level, you can pass `global_filters` or `global_cleaners` to the `Pipeline.run` function. For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from squeakily.filter import minhash_dedup\n",
+    "\n",
+    "pipeline.run(global_filters=[minhash_dedup])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{.callout-note}\n",
+    "Note: If you use global filters or cleaners, all datasets must have a common column name in order to properly concatenate them.\n",
     ":::"
    ]
   }
