Add multi-proc to filtering

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -98,11 +98,17 @@
     "                    )\n",
     "                for f in datasource[\"filters\"]:\n",
     "                    logger.info(f\"Running filter: {f.__name__} on {column}\")\n",
-    "                    dataset = dataset.filter(lambda x: f(x[column]))\n",
+    "                    dataset = dataset.filter(\n",
+    "                        lambda x: f(x[column]),\n",
+    "                        num_proc=os.cpu_count(),\n",
+    "                    )\n",
     "            else:\n",
     "                for f in datasource[\"filters\"]:\n",
     "                    logger.info(f\"Running filter: {f.__name__} on {column}\")\n",
-    "                    dataset = dataset.filter(lambda x: f(x[column]))\n",
+    "                    dataset = dataset.filter(\n",
+    "                        lambda x: f(x[column]),\n",
+    "                        num_proc=os.cpu_count(),\n",
+    "                    )\n",
     "                for c in datasource[\"cleaners\"]:\n",
     "                    logger.info(f\"Running cleaner: {c.__name__} on {column}\")\n",
     "                    dataset = dataset.map(\n",
@@ -130,7 +136,10 @@
     "\n",
     "            # Split the dataset back up\n",
     "            for i, dataset in enumerate(datasets):\n",
-    "                self.datasources[i][\"dataset\"] = global_dataset_with_meta.filter(lambda x: x[\"meta_data\"] == dataset.builder_name)"
+    "                self.datasources[i][\"dataset\"] = global_dataset_with_meta.filter(\n",
+    "                    lambda x: x[\"meta_data\"] == dataset.builder_name,\n",
+    "                    num_proc=os.cpu_count(),\n",
+    "                )"
    ]
   },
   {
@@ -408,9 +417,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('squeakily')",
+   "display_name": "squeakily",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.8 (main, Nov  4 2022, 13:48:29) [GCC 11.2.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5f195db6503bbc5667afded1b52e9ab285b55046984dce6832c75ed0c3d03158"
+   }
   }
  },
  "nbformat": 4,
